manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sx-monitor-demo-app-service
spec:
  selector:
    app: sx-monitor-demo-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
